<resources>
    <string name="app_name">ProfileNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_username">Santosh Thapa</string>
    <string name="nav_useremail">santoshthapa@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_weekly_test">Weekly Test</string>
    <string name="menu_performance">Performance</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_accounts">Accounts</string>
    <string name="home_events">Events</string>
    <string name="home_routine">Routine</string>
    <string name="home_information">Information</string>
    <string name="home_training_education">Training Education</string>
    <string name="home_assignments">Assignments</string>
    <string name="home_downloads">Downloads</string>

</resources>